add test for gameStart method